--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,16 @@ jobs:
       run: make linux-builder_win-x64
 
     - name: Create Release
-      uses: ncipollo/release-action@v1
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag: ${{ github.sha }}
-        name: Build ${{ github.sha }}
-        artifacts: "_bin/win-x64/*"
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: |
+          # Release Notes for ${{ github.ref }}
+          - Fixes a bug.
+          - Adds a new feature.
+        draft: false
+        prerelease: false
